--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./frontend/src/*"
+      ]
+    }
   },
   "include": [
     "frontend/src",
